name:                yahtzee
version:             0.1
synopsis:            Basic command line Yahtzee game
license:             MIT
license-file:        LICENSE
author:              Kjetil Valle
maintainer:          kjetil.valle@gmail.com
category:            Game
build-type:          Simple
extra-source-files:  README.txt
cabal-version:       >=1.10

executable yahtzee
  main-is:             yahtzee.hs
  build-depends:       base >=4.7 && <4.8
                     , random >=1.0 && <1.1
                     , tuple >=0.3 && <0.4
                     , containers >=0.5 && <0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
